Use Apache Commons for polyfill after all
Unfortunately, DatatypeConverter is not available on Android too, so we
have to use an external library.